# mlops-architecture

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: app_config.yaml  log_config.yaml
docs/: bestseller-mlops.drawio
models/delivery_duration/v1/: model_delivery_duration.json
src/: app.py
src/api/core/: config.py  event_handlers.py  log_management.py  middlewares.py
src/api/model/: delivery_duration.py  delivery_duration_response.py
src/api/router/: heartbeat.py  predictions.py  router.py
src/handlers/: predictor.py
src/notebooks/: Food_Delivery_Duration_Predictor.ipynb
test/config/: app_config.yaml  log_config.ini
test/integration/: heartbeat.py  predict_delivery_duration.py
test/unit_tests/: test_app.py
test/unit_tests/api/core/: test_config.py  test_event_handlers.py  test_log_management.py  test_middlewares.py
test/unit_tests/api/router/: test_heartbeat.py
