[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "mlops-architecture"
version = "0.0.1"
requires-python = ">=3.10.4"
dependencies = [
        "ipykernel==6.15.0",
        "pandas==1.4.2",
        "requests==2.28.0",
        "pytest==7.1.2",
        "PyYAML==6.0",
        "uvicorn==0.17.6",
        "fastapi==0.68.1",
        "starlette==0.14.2",
        "xgboost==2.0.3",
        "scikit-learn==1.3.2",
        "matplotlib==3.8.2",
        "seaborn==0.13.2",
        "geopy==2.4.1",
        "joblib==1.3.2"
]